feat: 아 콘피그맵이 아니었지

--- a/bsc-backend-api/base/deployment.yaml
+++ b/bsc-backend-api/base/deployment.yaml
@@ -19,7 +19,7 @@ spec:
           env:
             - name: GOOGLE_FIREBASE_TOKEN
               valueFrom:
-                configMapKeyRef:
+                secretKeyRef:
                   name: google-token
                   key: token
           ports:
