feat: 웹소켓 추가

--- a/bsc-backend-api/base/service.yaml
+++ b/bsc-backend-api/base/service.yaml
@@ -10,5 +10,8 @@ spec:
       targetPort: 8080
       protocol: TCP
       name: http
+    - port: 7007
+      targetPort: 7007
+      protocol: TCP
   selector:
     app: badsound-counter-api
