feat: 헬스체크 변경

--- a/bsc-backend-api/base/ingress.yaml
+++ b/bsc-backend-api/base/ingress.yaml
@@ -10,6 +10,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
     alb.ingress.kubernetes.io/ssl-redirect: '443'
+    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
 spec:
   tls:
     - hosts:
@@ -39,6 +40,8 @@ metadata:
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
     alb.ingress.kubernetes.io/ssl-redirect: '443'
     alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
+    alb.ingress.kubernetes.io/healthcheck-port: 8080
+    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
 spec:
   tls:
     - hosts:
