--- a/bsc-backend-api/base/deployment.yaml
+++ b/bsc-backend-api/base/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: bsc-backend-api
 spec:
   replicas: 2
+  minReadySeconds: 30
   selector:
     matchLabels:
       app: badsound-counter-api
@@ -13,6 +14,8 @@ spec:
       labels:
         app: badsound-counter-api
     spec:
+      readinessGates:
+        - conditionType: target-health.alb.ingress.k8s.aws/badsound-counter-api_badsound-counter-api_8080
       containers:
         - name: webserver
           image: 463935167443.dkr.ecr.ap-northeast-2.amazonaws.com/badsound-counter-api:4304ea4
@@ -25,3 +28,7 @@ spec:
           ports:
             - containerPort: 8080
             - containerPort: 7007
+          lifecycle:
+            preStop:
+              exec:
+                command: [ "/bin/sh", "-c", "sleep 40" ]
