feat: 게이트웨이 443

--- a/bsc-backend-api/base/gateway.yaml
+++ b/bsc-backend-api/base/gateway.yaml
@@ -13,3 +13,13 @@ spec:
         protocol: HTTP
       hosts:
         - "bsc.chuyong.kr"
+      tls:
+        httpsRedirect: true
+    - port:
+        number: 443
+        name: https
+        protocol: HTTPS
+      hosts:
+        - "bsc.chuyong.kr"
+      tls:
+        mode: PASSTHROUGH
