--- a/bsc-backend-api/base/gateway.yaml
+++ b/bsc-backend-api/base/gateway.yaml
@@ -18,8 +18,6 @@ spec:
     - port:
         number: 443
         name: https
-        protocol: HTTPS
+        protocol: HTTP
       hosts:
         - '*'
-      tls:
-        mode: PASSTHROUGH
