--- a/apps/templates/magcloud-backend-api.yaml
+++ b/apps/templates/magcloud-backend-api.yaml
@@ -1,22 +1,22 @@
-#apiVersion: argoproj.io/v1alpha1
-#kind: Application
-#metadata:
-#  name: magcloud-backend-api
-#  namespace: argocd
-#  finalizers:
-#    - resources-finalizer.argocd.argoproj.io
-#spec:
-#  destination:
-#    name: ''
-#    namespace: magcloud
-#    server: 'https://kubernetes.default.svc'
-#  source:
-#    path: magcloud-backend-api/overlays/prod
-#    repoURL: 'git@github.com:CChuYong/bsc-argocd-manifest.git'
-#    targetRevision: HEAD
-#  sources: []
-#  project: default
-#  syncPolicy:
-#    automated:
-#      prune: true
-#      selfHeal: true
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: magcloud-backend-api
+  namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    name: ''
+    namespace: magcloud
+    server: 'https://kubernetes.default.svc'
+  source:
+    path: magcloud-backend-api/overlays/prod
+    repoURL: 'git@github.com:CChuYong/bsc-argocd-manifest.git'
+    targetRevision: HEAD
+  sources: []
+  project: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
