feat: livenessprobe 추가

--- a/magcloud-backend-api/base/deployment.yaml
+++ b/magcloud-backend-api/base/deployment.yaml
@@ -84,10 +84,26 @@ spec:
                   key: google-firebase-secret-value
           resources:
             requests:
-              memory: "1Gi"
-              cpu: "250m"
+              memory: "2Gi"
+              cpu: "1000m"
             limits:
-              memory: "1Gi"
-              cpu: "500m"
+              memory: "2Gi"
+              cpu: "1000m"
           ports:
             - containerPort: 8080
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
