--- a/apps/templates/scylla-operator.yaml
+++ b/apps/templates/scylla-operator.yaml
@@ -1,70 +1,70 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: scylla-db
-  namespace: argocd
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
-spec:
-  destination:
-    name: ''
-    namespace: scylla
-    server: {{ .Values.spec.destination.server }}
-  sources:
-    - path: ''
-      repoURL: 'https://scylla-operator-charts.storage.googleapis.com/stable'
-      targetRevision: v1.8.1
-      chart: scylla-operator
-    - path: ''
-      repoURL: 'https://scylla-operator-charts.storage.googleapis.com/stable'
-      targetRevision: v1.8.1
-      chart: scylla
-      helm:
-        values: |-
-          nameOverride: ""
-          fullnameOverride: ""
-          scyllaImage:
-            repository: scylladb/scylla
-            tag: 5.0.5
-          agentImage:
-            repository: scylladb/scylla-manager-agent
-            tag: 3.0.1
-          serviceAccount:
-            create: true
-            annotations: {}
-          alternator:
-            enabled: false
-            port: 8000
-            writeIsolation: "always"
-          developerMode: false
-          cpuset: false
-          hostNetworking: false
-          automaticOrphanedNodeCleanup: false
-          sysctls: []
-          backups: []
-          repairs: []
-          
-          datacenter: "ap-northeast-2"
-          racks:
-            - name: "ap-northeast-2a"
-              scyllaConfig: "scylla-config"
-              scyllaAgentConfig: "scylla-agent-config"
-              members: 2
-              storage:
-                capacity: 10Gi
-              resources:
-                limits:
-                  cpu: 1
-                  memory: 3Gi
-                requests:
-                  cpu: 1
-                  memory: 3Gi
-          serviceMonitor:
-            create: false
-  project: default
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-      - CreateNamespace=true
+{{/*apiVersion: argoproj.io/v1alpha1*/}}
+{{/*kind: Application*/}}
+{{/*metadata:*/}}
+{{/*  name: scylla-db*/}}
+{{/*  namespace: argocd*/}}
+{{/*  finalizers:*/}}
+{{/*    - resources-finalizer.argocd.argoproj.io*/}}
+{{/*spec:*/}}
+{{/*  destination:*/}}
+{{/*    name: ''*/}}
+{{/*    namespace: scylla*/}}
+{{/*    server: {{ .Values.spec.destination.server }}*/}}
+{{/*  sources:*/}}
+{{/*    - path: ''*/}}
+{{/*      repoURL: 'https://scylla-operator-charts.storage.googleapis.com/stable'*/}}
+{{/*      targetRevision: v1.8.1*/}}
+{{/*      chart: scylla-operator*/}}
+{{/*    - path: ''*/}}
+{{/*      repoURL: 'https://scylla-operator-charts.storage.googleapis.com/stable'*/}}
+{{/*      targetRevision: v1.8.1*/}}
+{{/*      chart: scylla*/}}
+{{/*      helm:*/}}
+{{/*        values: |-*/}}
+{{/*          nameOverride: ""*/}}
+{{/*          fullnameOverride: ""*/}}
+{{/*          scyllaImage:*/}}
+{{/*            repository: scylladb/scylla*/}}
+{{/*            tag: 5.0.5*/}}
+{{/*          agentImage:*/}}
+{{/*            repository: scylladb/scylla-manager-agent*/}}
+{{/*            tag: 3.0.1*/}}
+{{/*          serviceAccount:*/}}
+{{/*            create: true*/}}
+{{/*            annotations: {}*/}}
+{{/*          alternator:*/}}
+{{/*            enabled: false*/}}
+{{/*            port: 8000*/}}
+{{/*            writeIsolation: "always"*/}}
+{{/*          developerMode: false*/}}
+{{/*          cpuset: false*/}}
+{{/*          hostNetworking: false*/}}
+{{/*          automaticOrphanedNodeCleanup: false*/}}
+{{/*          sysctls: []*/}}
+{{/*          backups: []*/}}
+{{/*          repairs: []*/}}
+{{/*          */}}
+{{/*          datacenter: "ap-northeast-2"*/}}
+{{/*          racks:*/}}
+{{/*            - name: "ap-northeast-2a"*/}}
+{{/*              scyllaConfig: "scylla-config"*/}}
+{{/*              scyllaAgentConfig: "scylla-agent-config"*/}}
+{{/*              members: 2*/}}
+{{/*              storage:*/}}
+{{/*                capacity: 10Gi*/}}
+{{/*              resources:*/}}
+{{/*                limits:*/}}
+{{/*                  cpu: 1*/}}
+{{/*                  memory: 3Gi*/}}
+{{/*                requests:*/}}
+{{/*                  cpu: 1*/}}
+{{/*                  memory: 3Gi*/}}
+{{/*          serviceMonitor:*/}}
+{{/*            create: false*/}}
+{{/*  project: default*/}}
+{{/*  syncPolicy:*/}}
+{{/*    automated:*/}}
+{{/*      prune: true*/}}
+{{/*      selfHeal: true*/}}
+{{/*    syncOptions:*/}}
+{{/*      - CreateNamespace=true*/}}
