--- a/keycloak/base/deployment.yaml
+++ b/keycloak/base/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: keycloak
-          image: quay.io/keycloak/keycloak:$$VERSION$$
+          image: quay.io/keycloak/keycloak:22.0.4
           args: ["start-dev"]
           env:
             - name: KEYCLOAK_ADMIN
